fix: resolve post-merge compilation and test failures
- Fix OpenAiApiClientFewShotTest constructor: add missing unifiedPrompt param (E5 merge)
- Fix PipelineServiceTest NPEs: extractConcepts mock now returns ExtractionResult with empty concepts list
- Fix PipelineServiceTest unnecessary stubbings: use LENIENT strictness for @MockitoSettings

All 70 tests pass, BUILD SUCCESS.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)
Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>